@@ -17,8 +17,8 @@ platform=cygwin
 #
 # Target version of Colorer
 #
-distr-version=.beta2
-eclipseplugin-version=_0.5.0
+distr-version=.beta3
+eclipseplugin-version=_0.6.0
 
 
 #
